--- a/style.css
+++ b/style.css
@@ -1,30 +1,31 @@
+body {
+    margin: 0;
+    padding: 0;
+}
+
 #header {
     background-color: white;
     font-family: 'Raleway', sans-serif;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    display: flex;
+    display: flex; 
     align-items: center; 
-    height: 4vh; 
-
-    padding: 25px 30px 25px 30px; 
+    width: 100%;
   }
 
 #btn-tickethack {
-    margin-left: 5px;
+    margin-left: 5vw;
     font-weight: 100;
     width: 6vw;
     padding: 6px;
     border: 2px #ffffff solid;
     border-radius: 0px;
-    color: black;
+    color: green;
     background-color: white;
-    font-size: 16px;
+    font-size: 20px;
+    justify-content: left;
 }
 
 #btn-cart {
-    margin-left: 500px;
+    margin-left: 70vw;
     font-weight: 100;
     width: 6vw;
     padding: 6px;
@@ -36,7 +37,7 @@
 }
 
 #btn-bookings {
-    margin-left: 600px;
+    margin-left: 4vw;
     font-weight: 100;
     width: 6vw;
     padding: 6px;
@@ -47,32 +48,95 @@
     font-size: 16px;
 }
 
+#btn-search :hover {
+    width: 6vw;
+    padding: 6px;
+    border: 2px #ffffff solid;
+    border-radius: 10px;
+    color: #ffffff;
+    background-color: green;
+    font-size: 16px;
+}
+
 h1 {
-    color: red;
+    justify-content: center;
+    align-items: flex-start;
+    color: white;
     font-size: 26px;
     font-weight: 700;
     text-align: top;
-    line-height: [heightofbox];
   }
 
 h2 {
-    color: red;
+    justify-content: center;
+    align-items: flex-start;
+    color: white;
     font-size: 20px;
     font-weight: 700;
     text-align: top;
-    line-height: [heightofbox];
   }
 
-#background {
-    display: block;
-    background-image: src("Images/background.jpg");
-    background-size: cover;
-    background-position: center center;
-    height: 100%;
+#container-background {
+    height: 100vh;
     width: 100%;
-    opacity: 1;
-    
+    background-image: url('images/background.jpg');
+    background-position: center center;
+    background-size: cover;
+    text-align: center;
+    padding-top: 15%;
+  
 }
-#container {
-    background-image: flex;
+#container-text {
+    align-items: flex-start;
+}
+
+.boxes {
+    display: flex;
+    align-items: center center;
+    align-content: space-between;
+}
+
+#white-box-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 50px;
+    background-color: white;
+    width: 70%;
+    border: 2px #ffffff solid;
+    border-radius: 10px;
+}
+
+#white-box-right {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 50px;
+    background-color: white;
+    width: 70%;
+    border: 2px #ffffff solid;
+    border-radius: 10px;
+}
+
+#logo {
+    height: 100px;
+    width: 100px;
+    margin-bottom: 10px;
+}
+
+#departure :hover {
+    border: 2px #ffffff solid;
+    border-radius: 10px;
+    color: #ffffff;
+    background-color: lightgrey;
+    color: gray;
+}
+
+#arrival {
+    border: 2px #ffffff solid;
+    border-radius: 10px;
+    color: #ffffff;
+    background-color: lightgrey;
+    color: gray;
 }
