--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body {
     font-size: 16px;
 }
 
-#btn-search :hover {
+#btn-search {
     width: 6vw;
     padding: 6px;
     border: 2px #ffffff solid;
@@ -103,7 +103,8 @@ h2 {
     align-items: center;
     margin: 50px;
     background-color: white;
-    width: 70%;
+    width: 50%;
+    height: 50vh;
     border: 2px #ffffff solid;
     border-radius: 10px;
 }
@@ -114,18 +115,21 @@ h2 {
     align-items: center;
     margin: 50px;
     background-color: white;
-    width: 70%;
+    width: 50%;
+    height: 50vh;
     border: 2px #ffffff solid;
     border-radius: 10px;
+    overflow: auto;
 }
 
-#logo {
+#logo-train {
     height: 100px;
     width: 100px;
     margin-bottom: 10px;
 }
 
-#departure :hover {
+
+#departure {
     border: 2px #ffffff solid;
     border-radius: 10px;
     color: #ffffff;
